<resources>
    <string name="app_name">Passwords</string>

    <string name="title_activity_FileChoser">File Choser</string>
    <string name="title_activity_datas">My Accounts</string>
    <string name="title_activity_new_usr">New User</string>
    <string name="title_activity_new_data">Add/Update</string>
    <string name="pass">Password</string>
    <string name="title_activity_main2">Login</string>
    <string name="action_settings">Settings</string>
    <string name="pres_long">Please press long</string>
    <string name="dataDeleted">Data Deleted</string>
    <string name="dataSaved">Successfully recorded</string>
    <string name="hello_world">Hello World</string>
    <string name="dataUnSaved">Unsuccessful operation</string>
    <string name="ok">Okey</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notok">Unsuccesfull</string>
    <string name="AddNewRecord">Add New Record</string>
    <string name="Order">Order</string>
    <string name="Export">Export</string>
    <string name="Import">Import</string>
    <string name="deleteData">Delete Data</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="displayName">Display Name</string>
    <string name="userName">User Name</string>
    <string name="description">Description</string>
    <string name="fileSize">File Size</string>
    <string name="currentDir">Current Dir</string>
    <string name="file2Import">File to Import:</string>
    <string name="exportFilePath">Selected File Path:</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
</resources>
