<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.enerjisa.mypass2.NewData">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/displayName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNewUserName"
        android:layout_below="@+id/etTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/userName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNewPass"
        android:layout_below="@+id/etNewUserName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/pass" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etDescription"
        android:layout_below="@+id/etNewPass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/btnNewSave"
        android:hint="@string/description"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentEnd="false"
        android:autoText="false"
        android:gravity="top" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnNewSave"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/etDescription"
        android:layout_alignEnd="@+id/etDescription" />
</RelativeLayout>
